--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,7 +3,7 @@
 name: Checks
 on: [push]
 jobs:
-  test-lin:
+  test-lint:
     name: Test and Lint
     runs-on: ubuntu-20.04
     steps:
@@ -15,6 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2 
       - name : Test
-        run: docker-compose run --rm app sh -c "python manage.py test"
+        run: docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test"
       - name: Lint
         run: docker-compose run --rm app sh -c "flake8"
